examples/vbcmn15/pass/reordRWsc.stl
/** reordRWsc **/
global x y; 
local l m; 

/** Optimised **/ 
read(x,l); 
write(y,m); 
fenceSC; 

/** Unoptimised **/ 
write(y,m); 
fenceSC; 
read(x,l); 


