examples/vbcmn15/fail/RymFRxlF-RxlFRymF.stl
/** reordRscRsc **/
global x,y; 
local l,m; 

/** Optimised **/ 
read(x,l); 
fenceSC; 
read(y,m); 
fenceSC; 

/** Unoptimised **/ 
read(y,m); 
fenceSC; 
read(x,l); 
fenceSC; 


